--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,63 +1,70 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.4/dist/web/variable/pretendardvariable.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    a {
+        @apply text-blue-600 underline;
+    }
+}
+
+
 html,
 body {
-  font-size: 10px;
-  padding: 0;
-  margin: 0;
-  font-family: "Pretendard Variable", -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: "Pretendard Variable", -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1 {
-  font-weight: 700;
-  font-size: 3.2rem;
-  line-height: 4.4rem;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 2.75rem;
 }
 
 h2 {
     font-weight: 700;
-    font-size: 2.4rem;
-    line-height: 3.6rem;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
 }
 
 h3 {
     font-weight: 600;
-    font-size: 2.4rem;
-    line-height: 3.6rem;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
 }
 
 h4 {
     font-weight: 600;
-    font-size: 2.0rem;
-    line-height: 3.2rem;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
 }
 
 h5 {
     font-weight: 500;
-    font-size: 2.4rem;
-    line-height: 2.7rem;
+    font-size: 1.5rem; /* 24px */
+    line-height: 1.67rem;
 }
 
 h6 {
     font-weight: 500;
-    font-size: 1.5rem;
-    line-height: 2.3rem;
+    font-size: 0.94rem; /* 15px */
+    line-height: 1.44rem;
 }
 
 p {
     font-weight: 400;
-    font-size: 1.4rem;
-    line-height: 2.2rem;
+    font-size: 0.875rem;  /* 14px */
+    line-height: 1.375rem; /* 22px */
 }
