--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -114,3 +114,32 @@
     flex-direction: column;
   }
 }
+
+.partnerLogoText {
+  /*position: absolute;*/
+  /*width: 136px;*/
+  height: 84px;
+  /*left: -138.5px;*/
+  /*top: 99px;*/
+
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 84px;
+  /* identical to box height, or 350% */
+
+  text-align: center;
+  letter-spacing: -0.5px;
+
+  color: rgba(0, 0, 0, 0.3);
+}
+.partnerLogoTextActive {
+  color: #000;
+  font-weight: 900;
+}
+
+.gradientBgSection {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) -0.86%, #EFF4F6 100%);
+}
+
