네비게이션바 로고 및 페이지 파비콘 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,3 +68,7 @@ p {
     font-size: 0.875rem;  /* 14px */
     line-height: 1.375rem; /* 22px */
 }
+
+.btn-hover-init:hover {
+    background-color: inherit !important;
+}
