--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -122,7 +122,7 @@
   /*left: -138.5px;*/
   /*top: 99px;*/
 
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
@@ -140,6 +140,9 @@
 }
 
 .gradientBgSection {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) -0.86%, #EFF4F6 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) -0.86%,
+    #eff4f6 100%
+  );
 }
-
