--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -133,15 +133,15 @@
     @apply px-4 h-12 border border-gray-200 placeholder-gray-400
           disabled:bg-gray-100 disabled:text-gray-400 focus:border-brand-1 focus:ring-0;
   }
-  .toggle {
-    @apply relative inline-flex flex-shrink-0 w-11 h-6 border-2 border-transparent rounded-full
-          cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-1
-          transition-colors ease-in-out duration-200;
-  }
-  .toggle-slider {
-    @apply pointer-events-none inline-block w-5 h-5 rounded-full bg-white shadow ring-0
-          transition ease-in-out duration-200 transform;
-  }
+  /*.toggle {*/
+  /*  @apply relative inline-flex flex-shrink-0 w-11 h-6 border-2 border-transparent rounded-full*/
+  /*        cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-1*/
+  /*        transition-colors ease-in-out duration-200;*/
+  /*}*/
+  /*.toggle-slider {*/
+  /*  @apply pointer-events-none inline-block w-5 h-5 rounded-full bg-white shadow ring-0*/
+  /*        transition ease-in-out duration-200 transform;*/
+  /*}*/
 }
 
 /*  */
