--- a/src/styles/dashboard-calendar.css
+++ b/src/styles/dashboard-calendar.css
@@ -108,8 +108,17 @@
 .react-calendar__tile--hasActive:enabled:focus {
   background: #a9d4ff;
 }
+.react-calendar__tile abbr {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  padding-top: 7px;
+}
 .react-calendar__tile--active abbr {
-  padding: 4px 6px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  padding-top: 7px;
   background: #7963F7;
   border-radius: 100px;
   color: white;
