--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -124,3 +124,10 @@ p {
     margin-right: 0.25rem;
   }
 }
+
+
+.Toastify__toast {
+  margin: 20px !important;
+  background: #333D4B !important;
+  border-radius: 14px !important;
+}
