--- a/src/styles/dashboard-calendar.css
+++ b/src/styles/dashboard-calendar.css
@@ -130,3 +130,6 @@
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: transparent;
 }
+.react-calendar__navigation__label {
+  pointer-events: none;
+}
