--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,7 +1,4 @@
-$breakpoints: (xs: 420px, sm: 640px, md: 768px, lg: 1024px, xl: 1280px);
-$grid-bases: (10, 12, 24);
-$grid-bases-default: 12;
-$gutter-size: 15px;
+@import "./variables/grid";
 
 .bs-container {
     width: 100%;
