--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -123,6 +123,14 @@ p {
     //@extend .mr-1;
     margin-right: 0.25rem;
   }
+
+  &-big {
+    height: 3.5rem;
+    min-height: 3.5rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    font-size: 1rem;
+  }
 }
 
 
