--- a/src/styles/v2/index.scss
+++ b/src/styles/v2/index.scss
@@ -26,3 +26,44 @@
     transform: rotate(180deg);
   }
 }
+
+.input-underline {
+  // 기존 스타일 초기화
+  --tw-bg-opacity: 0.05;
+  outline: none !important;
+  position: relative;
+
+  $height: 1.5px;
+  $speed: 150ms;
+  $inactive-color: #d3d3d3;
+  $active-color: #0070f3;
+
+  & + span {
+    display: block;
+    height: $height;
+    background-color: #{$inactive-color};
+    width: 100%;
+
+    &:after {
+      content: '';
+      display: block;
+      height: $height;
+      background-color: #{$active-color};
+      width: 0;
+      transition: width #{$speed} ease;
+    }
+  }
+
+  &:focus {
+    // 기존 스타일 초기화
+    --tw-bg-opacity: 1;
+    --tw-text-opacity: 1;
+    color: hsl(var(--bc) / var(--tw-text-opacity));
+
+    & + span {
+      &:after {
+        width: 100%;
+      }
+    }
+  }
+}
