--- a/src/layouts/ContentLayout/index.module.css
+++ b/src/layouts/ContentLayout/index.module.css
@@ -3,4 +3,6 @@
     /* top nav height 제거 */
     /* footer height 제거 */
     min-height: calc(100% - 64px - 62px);
+
+    background-color: #fafafa;
 }
