--- a/src/styles/content-layout/index.scss
+++ b/src/styles/content-layout/index.scss
@@ -52,16 +52,36 @@
   }
 }
 
-.ContentLayout--ContentButton {
+.ContentLayout--ContentButton,
+.btn2 {
   @apply btn btn-outline capitalize font-medium shadow;
   @apply text-gray-500 border-gray-300 bg-white;
   @apply hover:text-gray-800 hover:border-gray-500 hover:bg-white;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 
   &.btn-sm {
     height: 2rem;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
     min-height: 2rem;
     @apply text-xs shadow;
+  }
+  &.btn-xs {
+    height: 1.5rem;
+    min-height: 1.5rem;
+    @apply text-xs shadow;
+  }
+
+  $colors: (
+    ('primary', 'primary-content', 'primary', 'primary-focus'),
+    ('secondary', 'secondary-content', 'secondary', 'secondary-focus'),
+    ('success', 'success', 'success', 'success'),
+    ('green', 'green-300', 'green-500', 'green-800'),
+    ('gray', 'gray-300', 'gray-500', 'gray-800'),
+  );
+  @each $color-abbrev, $color-week, $color-normal, $color-strong in $colors {
+    &.btn-#{$color-abbrev} {
+      @apply text-#{$color-normal} border-#{$color-week} bg-white;
+      @apply hover:text-#{$color-strong} hover:border-#{$color-normal} hover:bg-white;
+    }
   }
 }
