--- a/src/styles/v2/index.scss
+++ b/src/styles/v2/index.scss
@@ -72,5 +72,14 @@
   transition: width 200ms ease;
   &.inactive {
     width: 0rem;
+    border-right: none;
+  }
+}
+
+.org-bar-item {
+  &.current {
+    outline: #000 3px solid;
+    outline-offset: 2px;
+    border-radius: 4px;
   }
 }
