--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -151,6 +151,60 @@ p {
   }
 }
 
+$color-name-list: ('slate', 'gray', 'zinc', 'stone', 'red', 'orange', 'amber', 'yellow', 'lime', 'green', 'emerald', 'teal', 'cyan', 'sky', 'blue', 'indigo', 'violet', 'purple', 'fuchsia', 'pink', 'rose');
+$color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
+
+@each $color-name in $color-name-list {
+  @each $scale in $color-scale-list {
+    $scale-darken: if($scale > 700, 900, $scale + 200);
+
+    .btn-#{$color-name}-#{$scale} {
+      @apply border-#{$color-name}-#{$scale} bg-#{$color-name}-#{$scale};
+
+      @if $scale >= 600 {
+        @apply text-white;
+      } @else {
+        @apply text-#{$color-name}-900;
+      }
+
+      &:hover {
+        @apply bg-#{$color-name}-#{$scale};
+        @apply text-white; // white
+      }
+
+      &.btn-outline {
+        @apply border-#{$color-name}-#{$scale} text-#{$color-name}-#{$scale};
+        background-color: initial;
+
+        &:hover {
+          @apply bg-#{$color-name}-#{$scale};
+          @apply text-white; // white
+        }
+      }
+    }
+  }
+}
+
+.btn-gray {
+  @apply border-gray-300 bg-gray-300;
+  @apply text-gray-800; // black
+
+  &:hover {
+    @apply bg-gray-500;
+    @apply text-white; // white
+  }
+
+  &.btn-outline {
+    @apply border-gray-500 text-gray-500;
+    background-color: initial;
+
+    &:hover {
+      @apply bg-gray-500;
+      @apply text-white; // white
+    }
+  }
+}
+
 //.hover-no {
 //  &.btn-primary   {@apply text-white bg-primary}
 //  &.btn-secondary {@apply text-white bg-secondary}
