--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -16,26 +16,42 @@
         }
 
         .h1-text {
-            font-size: 3.7em;
-            line-height: 1.2em;
+            font-size: 3.7rem;
+            line-height: 4.6rem;
+            @media (min-width: 1280px) {
+                font-size: 3.3rem;
+                line-height: 4.2rem;
+            }
         }
 
         .h2-text {
-            font-size: 3em;
-            line-height: 1.3em;
+            font-size: 3rem;
+            line-height: 3.9rem;
+            @media (min-width: 1280px) {
+                font-size: 2.8rem;
+                line-height: 3.7rem;
+            }
         }
 
         .body-text {
-            font-size: 1.6em;
-            line-height: 1.7em;
+            font-size: 1.6rem;
+            line-height: 3.5rem;
             font-weight: 500;
             color: rgb(107, 114, 128);
+            @media (min-width: 1280px) {
+                font-size: 1.4rem;
+                line-height: 2.4rem;
+            }
         }
 
         .s-text-sm {
             font-size: 1.4rem;
             color: rgb(107, 114, 128);
             line-height: 2.2rem;
+            @media (min-width: 1280px) {
+                font-size: 1.3rem;
+                line-height: 2.1rem;
+            }
         }
 
         .s-text-xl {
@@ -43,6 +59,9 @@
             font-weight: 700;
             color: #000;
             letter-spacing: -0.025em;
+            @media (min-width: 1280px) {
+                font-size: 4rem;
+            }
         }
 
         .s-text-top {
@@ -61,7 +80,7 @@
 
         .closeBeta-btn {
             width: 13.5rem;
-            height: 4.2rem;
+            height: 3.5rem;
             padding: 1rem 2rem;
             border-radius: 0.75rem;
             background: linear-gradient(90deg, rgb(36, 123, 255) 0%, rgb(49, 80, 217) 100%);
@@ -70,6 +89,11 @@
             font-weight: 500;
             line-height: 1.5rem;
             transform: none;
+            @media (min-width: 1280px) {
+                width: 9rem;
+                height: 3.5rem;
+                font-size: 1rem;
+            }
 
             &:hover {
                 transform: scale(1.03) translateZ(0px);
@@ -120,10 +144,9 @@
             .s3-image {
                 width: 50%;
                 margin: 0 2.5rem;
-            }
-
-            .s3-text {
-                margin-top: -0.8rem;
+                @media (min-width: 1280px) {
+                    width: 45%;
+                }
             }
 
             .s3-text-sm {
@@ -146,10 +169,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 1.875rem;
+            gap: 1.9rem;
             height: 50rem;
             padding: 5.5rem 0 5rem;
             background: #f3f6f6;
+            @media (min-width: 1280px) {
+                height: 48rem;
+            }
         }
     }
 }
