--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -16,42 +16,26 @@
         }
 
         .h1-text {
-            font-size: 3.7rem;
+            font-size: 3.5rem;
             line-height: 4.6rem;
-            @media (min-width: 1280px) {
-                font-size: 3.3rem;
-                line-height: 4.2rem;
-            }
         }
 
         .h2-text {
             font-size: 3rem;
             line-height: 3.9rem;
-            @media (min-width: 1280px) {
-                font-size: 2.8rem;
-                line-height: 3.7rem;
-            }
         }
 
         .body-text {
-            font-size: 1.6rem;
-            line-height: 3.5rem;
+            font-size: 1.5rem;
+            line-height: 2.5rem;
             font-weight: 500;
             color: rgb(107, 114, 128);
-            @media (min-width: 1280px) {
-                font-size: 1.4rem;
-                line-height: 2.4rem;
-            }
         }
 
         .s-text-sm {
             font-size: 1.4rem;
             color: rgb(107, 114, 128);
             line-height: 2.2rem;
-            @media (min-width: 1280px) {
-                font-size: 1.3rem;
-                line-height: 2.1rem;
-            }
         }
 
         .s-text-xl {
@@ -59,9 +43,6 @@
             font-weight: 700;
             color: #000;
             letter-spacing: -0.025em;
-            @media (min-width: 1280px) {
-                font-size: 4rem;
-            }
         }
 
         .s-text-top {
@@ -80,6 +61,24 @@
 
         .closeBeta-btn {
             width: 13.5rem;
+            height: 4.2rem;
+            padding: 1rem 2rem;
+            border-radius: 0.75rem;
+            background: linear-gradient(90deg, rgb(36, 123, 255) 0%, rgb(49, 80, 217) 100%);
+            color: #fff;
+            font-size: 1.125rem;
+            font-weight: 500;
+            line-height: 1.5rem;
+            transform: none;
+
+            &:hover {
+                transform: scale(1.03) translateZ(0px);
+                border: none;
+            }
+        }
+
+        .subscribe-btn {
+            width: 9.5rem;
             height: 3.5rem;
             padding: 1rem 2rem;
             border-radius: 0.75rem;
@@ -89,14 +88,10 @@
             font-weight: 500;
             line-height: 1.5rem;
             transform: none;
-            @media (min-width: 1280px) {
-                width: 9rem;
-                height: 3.5rem;
-                font-size: 1rem;
-            }
 
             &:hover {
                 transform: scale(1.03) translateZ(0px);
+                border: none;
             }
         }
 
@@ -106,6 +101,72 @@
             flex-wrap: nowrap;
             align-items: flex-start;
             gap: 2.25rem;
+        }
+
+        /* ✨ RESPONSIVE STYLE ✨ */
+        @media (max-width: 1024px) {
+            .h1-text {
+                font-size: 3rem;
+                line-height: 4.1rem;
+            }
+
+            .h2-text {
+                font-size: 2.6rem;
+                line-height: 3.5rem;
+            }
+
+            .body-text {
+                font-size: 1.4rem;
+                line-height: 2.3rem;
+            }
+
+            .s-text-sm {
+                font-size: 1.2rem;
+                line-height: 2rem;
+            }
+
+            .s-text-xl {
+                font-size: 3.8rem;
+            }
+
+            .s-text-top {
+                font-size: 1.5rem;
+            }
+
+            .closeBeta-btn {
+                width: 13rem;
+                height: 4rem;
+                color: #fff;
+                font-size: 1rem;
+            }
+
+            .subscribe-btn {
+                width: 8rem;
+                height: 3.5rem;
+                padding: 1rem 1rem;
+                font-size: 1rem;
+            }
+
+            .section-desc {
+                gap: 1.8rem;
+
+                .title-top {
+                    margin-bottom: 1.2rem;
+                }
+            }
+        }
+
+        @media (max-width: 1024px) {
+            .section-inner {
+                flex-direction: column;
+            }
+
+            .closeBeta-btn {
+                width: 14rem;
+                height: 4.5rem;
+                padding: 1rem 2rem;
+                margin-top: 3rem;
+            }
         }
     }
 
@@ -124,7 +185,6 @@
                 gap: 40px;
                 width: 8rem;
                 height: 3rem;
-                // border: 1px solid #333d4b;
 
                 .logo-img {
                     height: 100%;
@@ -144,9 +204,6 @@
             .s3-image {
                 width: 50%;
                 margin: 0 2.5rem;
-                @media (min-width: 1280px) {
-                    width: 45%;
-                }
             }
 
             .s3-text-sm {
@@ -173,8 +230,13 @@
             height: 50rem;
             padding: 5.5rem 0 5rem;
             background: #f3f6f6;
-            @media (min-width: 1280px) {
-                height: 48rem;
+        }
+
+        /* ✨ RESPONSIVE STYLE ✨ */
+        @media (min-width: 1024px) {
+            .section-4-box {
+                gap: 1.5rem;
+                height: 45rem;
             }
         }
     }
