--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -1,4 +1,7 @@
 #mainPage {
+    $sm: '768px'; // 태블릿
+    $md: '1024px';
+
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -249,7 +252,251 @@
         // }
     }
 
-    @media all and (min-width: 1024px) and (max-width: 1280px) {
+    .section-box-mobile {
+        width: 75%;
+
+        .section-inner {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .h1-text {
+            font-size: 3.5rem;
+            line-height: 4.6rem;
+        }
+
+        .h2-text {
+            font-size: 3rem;
+            line-height: 3.9rem;
+        }
+
+        .body-text {
+            font-size: 1.5rem;
+            line-height: 2.5rem;
+            font-weight: 500;
+            color: rgb(107, 114, 128);
+        }
+
+        .s-text-sm {
+            font-size: 1.4rem;
+            color: rgb(107, 114, 128);
+            line-height: 2.2rem;
+        }
+
+        .s-text-xl {
+            font-size: 4.5rem;
+            font-weight: 700;
+            color: #000;
+            letter-spacing: -0.025em;
+        }
+
+        .s-text-top {
+            display: inline-block;
+            font-size: 1.8rem;
+            font-weight: 700;
+            color: rgb(107, 114, 128);
+            opacity: 0.7;
+        }
+
+        .title-top {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1.4rem;
+        }
+
+        .closeBeta-btn {
+            width: 13.5rem;
+            height: 4.2rem;
+            padding: 1rem 2rem;
+            border-radius: 0.75rem;
+            background: linear-gradient(90deg, rgb(36, 123, 255) 0%, rgb(49, 80, 217) 100%);
+            color: #fff;
+            font-size: 1.125rem;
+            font-weight: 500;
+            line-height: 1.5rem;
+            transform: none;
+
+            &:hover {
+                transform: scale(1.03) translateZ(0px);
+                border: none;
+            }
+        }
+
+        .subscribe-btn {
+            width: 9.5rem;
+            height: 3.5rem;
+            padding: 1rem 2rem;
+            border-radius: 0.75rem;
+            background: linear-gradient(90deg, rgb(36, 123, 255) 0%, rgb(49, 80, 217) 100%);
+            color: #fff;
+            font-size: 1.125rem;
+            font-weight: 500;
+            line-height: 1.5rem;
+            transform: none;
+
+            &:hover {
+                transform: scale(1.03) translateZ(0px);
+                border: none;
+            }
+        }
+
+        .section-desc {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-items: flex-start;
+            gap: 2.25rem;
+        }
+
+        /* ✨ RESPONSIVE STYLE ✨ */
+        @media all and (min-width: 1024px) and (max-width: 1280px) {
+            .h1-text {
+                font-size: 3rem;
+                line-height: 4.1rem;
+            }
+
+            .h2-text {
+                font-size: 2.6rem;
+                line-height: 3.5rem;
+            }
+
+            .body-text {
+                font-size: 1.4rem;
+                line-height: 2.3rem;
+            }
+
+            .s-text-sm {
+                font-size: 1.2rem;
+                line-height: 2rem;
+            }
+
+            .s-text-xl {
+                font-size: 3.7rem;
+            }
+
+            .s-text-top {
+                font-size: 1.5rem;
+            }
+
+            .closeBeta-btn {
+                width: 13rem;
+                height: 4rem;
+                color: #fff;
+                font-size: 1rem;
+            }
+
+            .subscribe-btn {
+                width: 8rem;
+                height: 3.6rem;
+                padding: 1rem 1rem;
+                font-size: 1rem;
+            }
+
+            .section-desc {
+                gap: 1.8rem;
+
+                .title-top {
+                    margin-bottom: 1.2rem;
+                }
+            }
+        }
+
+        @media all and (min-width: 768px) and (max-width: 1023px) {
+            .section-inner {
+                flex-direction: column;
+            }
+
+            .h2-text {
+                font-size: 2.5rem;
+                line-height: 3.4rem;
+            }
+
+            .s-text-sm {
+                font-size: 1.5rem;
+                line-height: 2.6rem;
+            }
+
+            .aside-text {
+                font-size: 1.3rem;
+            }
+
+            .s-text-xl {
+                font-size: 4rem;
+            }
+
+            .closeBeta-btn {
+                width: 14rem;
+                height: 4.5rem;
+                padding: 1rem 2rem;
+                margin-top: 2rem;
+            }
+
+            .subscribe-btn {
+                width: 9rem;
+                padding: 1rem 0;
+            }
+
+            .title-top {
+                justify-content: center;
+                margin-bottom: 2rem;
+            }
+
+            .section-desc {
+                align-items: center;
+                gap: 2rem;
+            }
+        }
+
+        // @media all and (max-width: 768px) {
+        //     .section-inner {
+        //         flex-direction: column;
+        //     }
+
+        //     .h2-text {
+        //         font-size: 2.5rem;
+        //         line-height: 3.4rem;
+        //     }
+
+        //     .s-text-sm {
+        //         font-size: 1.5rem;
+        //         line-height: 2.6rem;
+        //     }
+
+        //     .aside-text {
+        //         font-size: 1.3rem;
+        //     }
+
+        //     .s-text-xl {
+        //         font-size: 4rem;
+        //     }
+
+        //     .closeBeta-btn {
+        //         width: 14rem;
+        //         height: 4.5rem;
+        //         padding: 1rem 2rem;
+        //         margin-top: 2rem;
+        //     }
+
+        //     .subscribe-btn {
+        //         width: 9rem;
+        //         padding: 1rem 0;
+        //     }
+
+        //     .title-top {
+        //         justify-content: center;
+        //         margin-bottom: 2rem;
+        //     }
+
+        //     .section-desc {
+        //         align-items: center;
+        //         gap: 2rem;
+        //     }
+        // }
+    }
+
+    @media (min-width: $md) {
         .section-box {
             width: 80%;
         }
