--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -7,12 +7,8 @@
     }
 }
 
-// xl, 1280px 이상부터 하면 끝
-// 리팩토링도 하기
-
 #mainPage {
-    // *** ex) min-width: 640px === 640px 이상인 애들에 적용된다.
-    // $sm 이하는 태블릿
+    // $sm 이하는 모바일
     $sm: '640px'; // 태블릿
     $md: '768px';
     $lg: '1024px';
@@ -39,13 +35,13 @@
         }
 
         .h2-text {
-            font-size: 2.3rem;
-            line-height: 3.2rem;
+            font-size: 2.4rem;
+            line-height: 3.3rem;
         }
 
         .body-text {
-            font-size: 1.5rem;
-            line-height: 2.5rem;
+            font-size: 1.4rem;
+            line-height: 2.4rem;
             font-weight: 500;
             color: rgb(107, 114, 128);
         }
@@ -65,7 +61,7 @@
 
         .s-text-top {
             display: inline-block;
-            font-size: 1.8rem;
+            font-size: 1.7rem;
             font-weight: 700;
             color: rgb(107, 114, 128);
             opacity: 0.7;
@@ -79,7 +75,7 @@
 
         .closeBeta-btn {
             width: 13.5rem;
-            height: 4.2rem;
+            height: 4.5rem;
             padding: 1rem 2rem;
             border-radius: 0.75rem;
             background: linear-gradient(90deg, rgb(36, 123, 255) 0%, rgb(49, 80, 217) 100%);
@@ -123,16 +119,49 @@
         }
     }
 
+    @media (min-width: $md) {
+        .section-box {
+            .h1-text {
+                font-size: 3.2rem;
+                line-height: 4.2rem;
+            }
+
+            .h2-text {
+                font-size: 2.5rem;
+                line-height: 3.4rem;
+            }
+
+            .body-text {
+                font-size: 1.5rem;
+                line-height: 2.5rem;
+            }
+
+            .s-text-sm {
+                font-size: 1.3rem;
+                line-height: 2.2rem;
+            }
+
+            .s-text-xl {
+                font-size: 4.4rem;
+            }
+        }
+    }
+
     @media (min-width: $lg) {
         .section-box {
             .section-inner {
                 flex-direction: row;
-                gap: 7rem;
+                gap: 6rem;
             }
 
             .h1-text {
                 font-size: 2.7rem;
                 line-height: 3.7rem;
+            }
+
+            .h2-text {
+                font-size: 2.3rem;
+                line-height: 3.2rem;
             }
 
             .body-text {
@@ -158,7 +187,6 @@
                 height: 4.2rem;
                 padding: 1rem;
                 font-size: 1.1rem;
-                font-weight: 500;
             }
 
             .subscribe-btn {
@@ -323,6 +351,7 @@
         }
     }
 
+    // * section-2
     #section-2 {
         mask-image: linear-gradient(
             to right,
@@ -387,6 +416,7 @@
         }
     }
 
+    // * section-3
     #section-3 {
         .section-3-image-box {
             display: flex;
@@ -461,6 +491,7 @@
         }
     }
 
+    // * section-4
     #section-4 {
         .section-4-box {
             display: flex;
@@ -469,14 +500,20 @@
             align-items: center;
             gap: 1.7rem;
             height: 44rem;
-            padding: 4rem 2rem;
+            padding: 4.5rem 2rem 4rem 2rem;
             background: #f3f6f6;
+        }
+
+        @media (min-width: $md) {
+            .section-4-box {
+                height: 50rem;
+            }
         }
 
         @media (min-width: $lg) {
             .section-4-box {
                 gap: 1.9rem;
-                height: 48rem;
+                height: 47rem;
             }
         }
 
@@ -484,7 +521,6 @@
             .section-4-box {
                 gap: 2.2rem;
                 height: 57rem;
-                padding: 4.5rem 2rem 4rem 2rem;
             }
         }
     }
