모달 공통된 기능 정리하고 컴포넌트 분리

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,6 +23,10 @@ body {
     "Segoe UI Symbol", sans-serif;
   background-color: #fafafa;
 }
+body.modal-opened {
+  height: 100vh;
+  overflow-y: hidden;
+}
 
 a {
     color: inherit;
