조직멤버별 기본 통화 보기 변경 기능 추가

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -28,6 +28,10 @@ body.modal-opened {
   overflow-y: hidden;
 }
 
+.card {
+  overflow: initial;
+}
+
 a {
     color: inherit;
     text-decoration: none;
