토스트 문자열 개행되지 않도록 수정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -162,3 +162,7 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
     -moz-appearance: textfield;
 }
+
+.Toastify__toast-body > div:last-child {
+    white-space: nowrap !important;
+}
