토스트 메세지 가로길이 동적으로 텍스트에 맞게 움직이도록 수정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -163,6 +163,15 @@ input[type='number'] {
     -moz-appearance: textfield;
 }
 
+.Toastify__toast-container {
+    width: initial !important;
+    min-width: 320px;
+}
+
 .Toastify__toast-body > div:last-child {
-    white-space: nowrap !important;
+    /*white-space: nowrap !important;*/
+}
+
+.scordi-bottom-toast {
+    /*white-space: nowrap !important;*/
 }
