블로그 / 최근게시물 호출 및 목록페이지내 전시 UI 추가

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -45,6 +45,14 @@ $breakpoint-mobile: 639px;
   }
 }
 
+.text-max-line {
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  overflow: hidden;
+  //max-height: 3.6em;
+  //line-height: 1.8em;
+}
+
 .blog-post-item-title {
   color: #333d4b;
   transition: all 0.2s ease-in-out 0s;
