결제내역 상세 페이지모달 - 제목과 발신 항목 UI 길이 깨지는 문제 수정

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -150,6 +150,10 @@ p {
     border-radius: 14px !important;
 }
 
+.keep-all {
+  word-break: keep-all;
+}
+
 .no-selectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
