보관 계정 목록 모달

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -17,3 +17,18 @@
     border-radius: 0;
   }
 }
+
+.modal {
+  &.modal-bottom {
+    .modal-box {
+      transition: all 200ms ease;
+      transform: translateY(100%);
+    }
+
+    &.modal-open {
+      .modal-box {
+        transform: translateY(0);
+      }
+    }
+  }
+}
